add opencl reshape op

--- a/mindspore/lite/src/runtime/kernel/opencl/CMakeLists.txt
+++ b/mindspore/lite/src/runtime/kernel/opencl/CMakeLists.txt
@@ -10,4 +10,5 @@ set(OPENCL_KERNEL_SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/kernel/concat.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/kernel/conv2d_transpose.cc
     ${CMAKE_CURRENT_SOURCE_DIR}/kernel/transpose.cc
+    ${CMAKE_CURRENT_SOURCE_DIR}/kernel/reshape.cc
     )
