the sixth sended caffe gate

--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -22,3 +22,8 @@ ml_ocr_sfz_detect_0325
 ml_hardware_liveness
 ml_liveness_detect_landmark
 ml_face_contour
+2012_ATLANTA_1class_20190621_v4.x_nomean
+ml_handpose
+ml_ocr_sfz_add_final_0325
+ml_hardware_pose
+ml_bank_recog
