--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -1,9 +1,12 @@
 hiai_model_0909_kd_rot_ps_softmax.tflite
 hiai_chinese_english_recognize_model_float32.tflite
-hiai_bigmodel_ghost_2_1_no_normalized_no_trans_tflite.tflite
+#hiai_bigmodel_ghost_2_1_no_normalized_no_trans_tflite.tflite
 hiai_bigmodel_ghost_5_1_no_normalized_no_trans_tflite.tflite
 hiai_cn_recognize_modify_padv2.tflite
 hiai_model_normalize_object_scene_ps_20200519.tflite
+#hiai_detectmodel_06_23_960_480_1180700.tflite
+#hiai_detect_curve_model_float32.tflite
+#hiai_detectmodel_desnet_256_128_64_32.tflite
 mtk_AADB_HADB_MBV2_model_fp32.tflite
 mobilenet_v1_0.25_128.tflite
 mobilenet_v1_0.25_160.tflite
