add 101_mtk_005_face_attribute models

--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -24,6 +24,8 @@ mobilenet_v1_1.0_224.tflite
 mobilenet_v2_1.0_224.tflite
 mtk_model_normalize_object_scene_ps_20200519_f32.tflite
 mtk_model_ckpt.tflite
+mtk_age_gender.tflite
+mtk_model_face_dress.tflite
 densenet.tflite
 resnet_v2_101_299.tflite
 mnasnet_1.3_224.tflite
