1.add fp16 conv sliding window 2.fix conv 3x3 bug

--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -1,6 +1,6 @@
 hiai_model_0909_kd_rot_ps_softmax.tflite
 hiai_chinese_english_recognize_model_float32.tflite
-#hiai_bigmodel_ghost_2_1_no_normalized_no_trans_tflite.tflite
+hiai_bigmodel_ghost_2_1_no_normalized_no_trans_tflite.tflite
 hiai_bigmodel_ghost_5_1_no_normalized_no_trans_tflite.tflite
 hiai_cn_recognize_modify_padv2.tflite
 hiai_model_normalize_object_scene_ps_20200519.tflite
