adjust test model

--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -5,7 +5,7 @@ gender_res_large_deploy
 glasses
 hat
 isface
-ml_bank_detect_0312
+#ml_bank_detect_0312
 ml_face_div_parsing
 ml_hardware_eyeclose
 ml_ocr_detect_20200305
