--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -35,6 +35,16 @@ mnasnet_1.3_224.tflite
 inception_v3.tflite
 deeplabv3_257_mv_gpu.tflite
 multi_person_mobilenet_v1_075_float.tflite
+#hiai_vad.tflite
+#ide_label_base.tflite
+#ide_label_retrained.tflite
+#ml_ei_headpose.tflite
+#ml_ei_landmark.tflite
+#mnist.tflite
+#mobilenet.tflite
+#resnet.tflite
+#scan_hms_angle1.tflite
+#scan_hms_detect.tflite
 hiai_latin_ocr.tflite
 hiai_latin_ocr_1.tflite
 ml_ocr_jk.tflite
