add tflite model_ocr_latin and hiai_ssd_mobilenetv2_object

--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -39,3 +39,5 @@ hiai_latin_ocr.tflite
 hiai_latin_ocr_1.tflite
 ml_ocr_jk.tflite
 inception_resnet_v2.tflite
+ml_ocr_latin.tflite
+hiai_ssd_mobilenetv2_object.tflite
