--- a/mindspore/lite/tools/converter/parser/caffe/CMakeLists.txt
+++ b/mindspore/lite/tools/converter/parser/caffe/CMakeLists.txt
@@ -51,4 +51,6 @@ add_library(caffe_parser_mid OBJECT
         ${CMAKE_CURRENT_SOURCE_DIR}/caffe_inspector.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/caffe_inspector.h
         ${CMAKE_CURRENT_SOURCE_DIR}/caffe_interp_parser.cc
-        ${CMAKE_CURRENT_SOURCE_DIR}/caffe_interp_parser.h)
+        ${CMAKE_CURRENT_SOURCE_DIR}/caffe_interp_parser.h
+        ${CMAKE_CURRENT_SOURCE_DIR}/caffe_permute_parser.cc
+        ${CMAKE_CURRENT_SOURCE_DIR}/caffe_permute_parser.h)
