--- a/mindspore/lite/test/CMakeLists.txt
+++ b/mindspore/lite/test/CMakeLists.txt
@@ -149,6 +149,7 @@ if (SUPPORT_GPU)
             ${LITE_DIR}/src/runtime/kernel/opencl/kernel/transpose.cc
             ${LITE_DIR}/src/runtime/kernel/opencl/kernel/reshape.cc
             ${LITE_DIR}/src/runtime/kernel/opencl/kernel/to_format.cc
+            ${LITE_DIR}/src/runtime/kernel/opencl/kernel/caffe_prelu.cc
             )
 endif()
 ### minddata lite
@@ -322,15 +323,15 @@ if (SUPPORT_GPU)
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/transpose_tests.cc
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/convolution_tests.cc
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/activation_tests.cc
-            #${TEST_DIR}/ut/src/runtime/kernel/opencl/leakyrelu_tests.cc
             ${TEST_DIR}/ut/src/runtime/kernel/opencl/to_format_tests.cc
+            ${TEST_DIR}/ut/src/runtime/kernel/opencl/caffe_prelu_tests.cc
             )
 endif()
 
 if (ENABLE_FP16)
     set(TEST_SRC
             ${TEST_SRC}
-)
+            ${TEST_DIR}/ut/src/runtime/kernel/arm/fp16/convolution_fp16_tests.cc)
 endif ()
 
 
