fix conv_action_fusion bug

--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -48,4 +48,6 @@ scan_hms_angle1.tflite
 hiai_latin_ocr.tflite
 hiai_latin_ocr_1.tflite
 ml_ocr_jk.tflite
+nasnet_mobile.tflite
+nasnet_large.tflite
 inception_resnet_v2.tflite
