--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -50,4 +50,5 @@ hiai_latin_ocr_1.tflite
 ml_ocr_jk.tflite
 nasnet_mobile.tflite
 nasnet_large.tflite
+model_emotions_0727_nosoftmax.tflite
 inception_resnet_v2.tflite
