Add test cases of tflite models

--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -37,9 +37,9 @@ deeplabv3_257_mv_gpu.tflite
 multi_person_mobilenet_v1_075_float.tflite
 #hiai_vad.tflite
 ide_label_base.tflite
-#ide_label_retrained.tflite
-#ml_ei_headpose.tflite
-#ml_ei_landmark.tflite
+ide_label_retrained.tflite
+ml_ei_headpose.tflite
+ml_ei_landmark.tflite
 mnist.tflite
 mobilenet.tflite
 resnet.tflite
