--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -54,3 +54,5 @@ model_emotions_0727_nosoftmax.tflite
 inception_resnet_v2.tflite
 ml_ocr_latin.tflite
 hiai_ssd_mobilenetv2_object.tflite
+inception_v4.tflite
+ml_object_detect.tflite
