--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -56,3 +56,4 @@ ml_ocr_latin.tflite
 hiai_ssd_mobilenetv2_object.tflite
 inception_v4.tflite
 ml_object_detect.tflite
+mtk_model_normalize_object_scene_ps_20200519_f16.tflite
