--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -16,6 +16,11 @@ tracking
 mtk_isface
 mtk_landmark
 mtk_pose_tuku
+mtk_face_recognition_v1
+#mtk_2012_ATLANTA_10class_20190614_v4.1
+mtk_detect-deeper-halfdeeper-mbv1-lastearlySSD-shortcut-400-400_nopostprocess_simplified
+detect-deeper-halfdeeper-mbv1-shortcut-400-400_nopostprocess_simplified
+detect-mbv1-shortcut-400-400_nopostprocess_simplified
 ml_hand_detection
 ml_ocr_cn
 ml_ocr_sfz_detect_0325
