--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -30,3 +30,6 @@ ml_bank_recog
 2012_ATLANTA_10class_20190131_v4.0
 mnet
 recognition
+ml_face_landmark
+model_hebing_3branch
+detect-mbv1-shortcut-400-400_nopostprocess_simplified
