add tflite model

--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -30,6 +30,7 @@ mtk_model_ckpt.tflite
 mtk_age_gender.tflite
 mtk_model_face_dress.tflite
 densenet.tflite
+squeezenet.tflite
 resnet_v2_101_299.tflite
 mnasnet_1.3_224.tflite
 inception_v3.tflite
@@ -55,5 +56,5 @@ inception_resnet_v2.tflite
 ml_ocr_latin.tflite
 hiai_ssd_mobilenetv2_object.tflite
 inception_v4.tflite
-ml_object_detect.tflite
 mtk_model_normalize_object_scene_ps_20200519_f16.tflite
+ml_object_detect.tflite
