--- a/mindspore/lite/tools/converter/CMakeLists.txt
+++ b/mindspore/lite/tools/converter/CMakeLists.txt
@@ -115,3 +115,7 @@ target_link_libraries(converter_lite PRIVATE
         mindspore::eigen
         )
 
+if (NOT PLATFORM_arm64 AND NOT PLATFORM_arm32)
+    install(TARGETS converter_lite
+            RUNTIME DESTINATION ${MAIN_DIR}/converter COMPONENT ${COMPONENT_NAME})
+endif ()
