Add ci tests for tflite and caffe models

--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -47,7 +47,7 @@ mnist.tflite
 mobilenet.tflite
 resnet.tflite
 scan_hms_angle1.tflite
-#scan_hms_detect.tflite
+scan_hms_detect.tflite
 hiai_latin_ocr.tflite
 hiai_latin_ocr_1.tflite
 ml_ocr_jk.tflite
