add tflite fp16 models and hiai models

--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -20,7 +20,10 @@ mtk_face_recognition_v1
 #mtk_2012_ATLANTA_10class_20190614_v4.1
 mtk_detect-deeper-halfdeeper-mbv1-lastearlySSD-shortcut-400-400_nopostprocess_simplified
 detect-deeper-halfdeeper-mbv1-shortcut-400-400_nopostprocess_simplified
-detect-mbv1-shortcut-400-400_nopostprocess_simplified
+#hiai_face_detect_rfb
+hiai_face_isface
+hiai_face_landmark
+hiai_face_pose_tuku
 ml_hand_detection
 ml_ocr_cn
 ml_ocr_sfz_detect_0325
