--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -30,7 +30,7 @@ mtk_model_normalize_object_scene_ps_20200519_f32.tflite
 mtk_model_ckpt.tflite
 mtk_age_gender.tflite
 mtk_model_face_dress.tflite
-#mtk_face_features_v1.tflite
+mtk_face_features_v1.tflite
 densenet.tflite
 squeezenet.tflite
 resnet_v2_101_299.tflite
@@ -59,4 +59,7 @@ ml_ocr_latin.tflite
 hiai_ssd_mobilenetv2_object.tflite
 inception_v4.tflite
 mtk_model_normalize_object_scene_ps_20200519_f16.tflite
+mtk_age_gender_fp16.tflite
+mtk_model_face_dress_fp16.tflite
+mtk_AADB_HADB_MBV2_model_f16.tflite
 ml_object_detect.tflite
