--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -16,7 +16,7 @@ tracking
 mtk_isface
 mtk_landmark
 mtk_pose_tuku
-#mtk_face_recognition_v1
+mtk_face_recognition_v1
 #mtk_2012_ATLANTA_10class_20190614_v4.1
 mtk_detect-deeper-halfdeeper-mbv1-lastearlySSD-shortcut-400-400_nopostprocess_simplified
 detect-deeper-halfdeeper-mbv1-shortcut-400-400_nopostprocess_simplified
@@ -34,8 +34,20 @@ ml_hardware_pose
 ml_bank_recog
 2012_ATLANTA_10class_20190131_v4.0
 mnet
-#recognition
+recognition
 ml_face_landmark
 model_hebing_3branch
+hiai_cv_focusShootOCRModel_07
+hiai_cv_focusShootOCRModel_03
+hiai_cv_focusShootOCRModel_01
+hiai_face_hat1
+hiai_cv_focusShootOCRModel_04
+hiai_cv_focusShootOCRModel_06
+hiai_cpu_face_hat
+hiai_video_seg
+hiai_semantic_seg
+#hiai_human_seg
+#hiai_face_recognition_1
+hiai_cpu_face_detect
 detect-mbv1-shortcut-400-400_nopostprocess_simplified
-detect_mbv1_640_480_nopostprecess_simplified
+#detect_mbv1_640_480_nopostprecess_simplified
