--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -60,3 +60,6 @@ hiai_ssd_mobilenetv2_object.tflite
 inception_v4.tflite
 mtk_model_normalize_object_scene_ps_20200519_f16.tflite
 ml_object_detect.tflite
+hiai_cpu_face_emotion.tflite
+hiai_cpu_face_gazing.tflite
+hiai_cpu_face_headpose.tflite
