--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -66,3 +66,5 @@ ml_object_detect.tflite
 hiai_cpu_face_emotion.tflite
 hiai_cpu_face_gazing.tflite
 hiai_cpu_face_headpose.tflite
+ml_face_openclose.tflite
+hiai_face_model_npu.tflite
