modify onnx parser
modify caffe parser

--- a/mindspore/lite/tools/converter/parser/caffe/CMakeLists.txt
+++ b/mindspore/lite/tools/converter/parser/caffe/CMakeLists.txt
@@ -27,5 +27,4 @@ add_library(caffe_parser_mid OBJECT
         ${CMAKE_CURRENT_SOURCE_DIR}/caffe_inspector.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/caffe_interp_parser.cc
         ${CMAKE_CURRENT_SOURCE_DIR}/caffe_permute_parser.cc
-        ${CMAKE_CURRENT_SOURCE_DIR}/caffe_tile_parser.cc
-        ${CMAKE_CURRENT_SOURCE_DIR}/caffe_proposal_parser.cc)
+        ${CMAKE_CURRENT_SOURCE_DIR}/caffe_tile_parser.cc)
