Modify structure of tar packages of mindspore-lite

--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -53,4 +53,4 @@ hiai_semantic_seg
 #hiai_face_recognition_1
 hiai_cpu_face_detect
 detect-mbv1-shortcut-400-400_nopostprocess_simplified
-#detect_mbv1_640_480_nopostprecess_simplified
+detect_mbv1_640_480_nopostprocess_simplified
