hiai_human_seg and hiai_face_recognition caffe gate

--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -49,7 +49,7 @@ hiai_cv_focusShootOCRModel_06
 hiai_cpu_face_hat
 hiai_video_seg
 hiai_semantic_seg
-#hiai_human_seg
+hiai_human_seg
 #hiai_face_recognition_1
 hiai_cpu_face_detect
 detect-mbv1-shortcut-400-400_nopostprocess_simplified
