--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -50,7 +50,7 @@ hiai_cpu_face_hat
 hiai_video_seg
 hiai_semantic_seg
 hiai_human_seg
-#hiai_face_recognition_1
+hiai_face_recognition_1
 hiai_cpu_face_detect
 detect-mbv1-shortcut-400-400_nopostprocess_simplified
 detect_mbv1_640_480_nopostprocess_simplified
