add tflite and caffe models

--- a/mindspore/lite/test/models_caffe.cfg
+++ b/mindspore/lite/test/models_caffe.cfg
@@ -17,10 +17,10 @@ mtk_isface
 mtk_landmark
 mtk_pose_tuku
 mtk_face_recognition_v1
-#mtk_2012_ATLANTA_10class_20190614_v4.1
+mtk_2012_ATLANTA_10class_20190614_v41
 mtk_detect-deeper-halfdeeper-mbv1-lastearlySSD-shortcut-400-400_nopostprocess_simplified
 detect-deeper-halfdeeper-mbv1-shortcut-400-400_nopostprocess_simplified
-#hiai_face_detect_rfb
+hiai_face_detect_rfb
 hiai_face_isface
 hiai_face_landmark
 hiai_face_pose_tuku
