--- a/mindspore/lite/test/models_tflite.cfg
+++ b/mindspore/lite/test/models_tflite.cfg
@@ -64,6 +64,9 @@ mtk_model_normalize_object_scene_ps_20200519_f16.tflite
 mtk_age_gender_fp16.tflite
 mtk_model_face_dress_fp16.tflite
 mtk_AADB_HADB_MBV2_model_f16.tflite
+mtk_AADB_HADB_MBV3_model_f16.tflite
+mtk_model_emotions_0725_fp16.tflite
+magenta_arbitrary-image-stylization-v1-256_fp16_prediction_1.tflite
 ml_object_detect.tflite
 hiai_cpu_face_emotion.tflite
 hiai_cpu_face_gazing.tflite
